force-app/main/default/objects/Order/fields/Create_L_P_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_L_P_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to be checked through a Trigger on Order Line. If the Services Provisioned Checkbox on the Order Line is unchecked for at least one of the Order Lines, this field will be checked to call upon the Process Builder to create Licensing/ Provisioning Case.</description>
    <inlineHelpText>Field to be checked through a Trigger on Order Line. If the Services Provisioned Checkbox on the Order Line is unchecked for at least one of the Order Lines, this field will be checked to call on the Process Builder to create Licensing/ Provisioning Case</inlineHelpText>
    <label>Create L/P Case</label>
    <type>Checkbox</type>
</CustomField>