force-app/main/default/objects/Order/fields/CWS_Account_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account_Unique_Identifier__c</fullName>
    <formula>CWS_Bill_To_Account__r.CWS_Account_Unique_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Unique Identifier</label>
    <type>Text</type>
</CustomField>