force-app/main/default/objects/Order/fields/CWS_Actual_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>CWS_Actual_Contract_Term__c</fullName>
    <description>Twin field from quote</description>
    <label>Actual Contract Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>