force-app/main/default/objects/Order/fields/CWS_AddOnEvergreen__c.field-meta.xml
<CustomField>
    <fullName>CWS_AddOnEvergreen__c</fullName>
    <description>Denotes the evergreen orders created from amending the termed quote</description>
    <formula>AND(ISPICKVAL(CWS_Quote_Type__c,&apos;Amendment&apos;),NOT(CWS_OriginalOrder__r.CWS_Evergreen_Order__c), CWS_Evergreen_Order__c)</formula>
    <inlineHelpText>Denotes the evergreen orders created from amending the termed quote</inlineHelpText>
    <label>Add On Evergreen</label>
    <type>Checkbox</type>
</CustomField>