force-app/main/default/objects/Order/fields/CWS_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order (Bill-To Account)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>