force-app/main/default/objects/Order/fields/CWS_Billing_Term__c.field-meta.xml
<CustomField>
    <fullName>CWS_Billing_Term__c</fullName>
    <label>Billing Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bi-Annually</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Tri-Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>