force-app/main/default/objects/Order/fields/CWS_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>CWS_Company_Code__c</fullName>
    <description>Captures the Tax code for based upon the legal Entity.</description>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>