force-app/main/default/objects/Order/fields/CWS_Company_Domain__c.field-meta.xml
<CustomField>
    <fullName>CWS_Company_Domain__c</fullName>
    <formula>CWS_Bill_To_Account__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Domain</label>
    <type>Text</type>
</CustomField>