force-app/main/default/objects/Order/fields/CWS_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contract_ID__c</fullName>
    <formula>Contract.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract ID</label>
    <type>Text</type>
</CustomField>