force-app/main/default/objects/Order/fields/CWS_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contract_Number__c</fullName>
    <formula>Contract.ContractNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>