force-app/main/default/objects/Order/fields/CWS_Distributor_Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor_Fulfillment_Type__c</fullName>
    <description>Distributor Account&apos;s Fulfillment Type populated using trigger with the Fulfillment Type selected for this Distributor on the Distributor/Reseller object related to the Sold To Account</description>
    <inlineHelpText>Distributor Account&apos;s Fulfillment Type populated using trigger with the Fulfillment Type selected for this Distributor on the Distributor/Reseller object related to the Sold To Account</inlineHelpText>
    <label>Distributor Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Fulfillment_Type</valueSetName>
    </valueSet>
</CustomField>