force-app/main/default/objects/Order/fields/CWS_Evergreen_Order__c.field-meta.xml
<CustomField>
    <fullName>CWS_Evergreen_Order__c</fullName>
    <description>If all the Order Line Items are of Type Evergreen, mark the Order as Evergreen</description>
    <formula>if( CWS_Number_of_Order_Lines__c =  CWS_Number_of_Evergreen_Products__c, true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evergreen Order</label>
    <type>Checkbox</type>
</CustomField>