force-app/main/default/objects/Order/fields/CWS_First_Subscription__c.field-meta.xml
<CustomField>
    <fullName>CWS_First_Subscription__c</fullName>
    <description>First subscription on the renewal cycles</description>
    <formula>CWS_FirstOrder__r.CWS_ZuoraSubscriptionNumber__c</formula>
    <label>First Subscription</label>
    <type>Text</type>
</CustomField>