force-app/main/default/objects/Order/fields/CWS_FirstOrder__c.field-meta.xml
<CustomField>
    <fullName>CWS_FirstOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first order in the renewal cycles</description>
    <label>First Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders (First Order)</relationshipLabel>
    <relationshipName>CWS_FirstOrders</relationshipName>
    <type>Lookup</type>
</CustomField>