force-app/main/default/objects/Order/fields/CWS_IntegrationErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>CWS_IntegrationErrorMessage__c</fullName>
    <description>Integration error message stamped by Dell Boomi in case of an unsuccessful integration to NetSuite or Zuora</description>
    <inlineHelpText>Integration error message stamped by Dell Boomi in case of an unsuccessful integration to NetSuite or Zuora</inlineHelpText>
    <label>Integration Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>