force-app/main/default/objects/Order/fields/CWS_Invoice_Separately__c.field-meta.xml
<CustomField>
    <fullName>CWS_Invoice_Separately__c</fullName>
    <formula>OR
(
AND(NOT(ISBLANK(PoNumber)), NOT(CWS_Bill_To_Account__r.CWS_Need_Recurring__c)), 
TEXT(CWS_Bill_To_Account__r.CWS_Payment_Terms__c)&lt;&gt;TEXT(SBQQ__PaymentTerm__c),
CWS_Pre_Payment_Ammount__c &gt; 0
)</formula>
    <label>Invoice Separately</label>
    <type>Checkbox</type>
</CustomField>