force-app/main/default/objects/Order/fields/CWS_Legacy_Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Agreement_ID__c</fullName>
    <description>This field will be used as an identifier based on which the order can be searched</description>
    <externalId>true</externalId>
    <label>Legacy Agreement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>