force-app/main/default/objects/Order/fields/CWS_Legacy_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Subscription_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>