force-app/main/default/objects/Order/fields/CWS_LegacyEvergreen__c.field-meta.xml
<CustomField>
    <fullName>CWS_LegacyEvergreen__c</fullName>
    <description>The identifier for the Legacy Evergreen twinned from the Quote</description>
    <label>Legacy Evergreen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_LegacyEvergreen</valueSetName>
    </valueSet>
</CustomField>