force-app/main/default/objects/Order/fields/CWS_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Legal_Entity</valueSetName>
    </valueSet>
</CustomField>