force-app/main/default/objects/Order/fields/CWS_LinesWODatesPopulated__c.field-meta.xml
<CustomField>
    <fullName>CWS_LinesWODatesPopulated__c</fullName>
    <description>Number of Order lines without start date</description>
    <label>Line without Date Populated</label>
    <summaryFilterItems>
        <field>OrderItem.ServiceDate</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>