force-app/main/default/objects/Order/fields/CWS_LineToBeProvisioned__c.field-meta.xml
<CustomField>
    <fullName>CWS_LineToBeProvisioned__c</fullName>
    <description>Number of lines where provisioning date is blank but provisioning eligibility is not NA</description>
    <label>Lines to be Provisioned</label>
    <summaryFilterItems>
        <field>OrderItem.CWS_ProvisioningDate__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.CWS_Provisioning_Eligibility__c</field>
        <operation>notEqual</operation>
        <value>NA</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>