force-app/main/default/objects/Order/fields/CWS_ManageIntegrationError__c.field-meta.xml
<CustomField>
    <fullName>CWS_ManageIntegrationError__c</fullName>
    <description>Integration will populate this Custom field with error details if any while creating Opportunity in Manage.</description>
    <label>Manage Integration Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>