force-app/main/default/objects/Order/fields/CWS_ManageOpportunityRecID__c.field-meta.xml
<CustomField>
    <fullName>CWS_ManageOpportunityRecID__c</fullName>
    <description>The integration logic will populate this with Manage Opportunity Rec reference Id.</description>
    <inlineHelpText>The integration logic will populate this with Manage Opportunity Rec reference Id.</inlineHelpText>
    <label>Manage Opportunity RecID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>