force-app/main/default/objects/Order/fields/CWS_Master__c.field-meta.xml
<CustomField>
    <fullName>CWS_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order with Master? as TRUE, indicates only legacy records with $value for commitment.</description>
    <inlineHelpText>Order with Master? as TRUE, indicates only legacy records with $value for commitment.</inlineHelpText>
    <label>Master</label>
    <type>Checkbox</type>
</CustomField>