force-app/main/default/objects/Order/fields/CWS_Master_Dedicated_Tech__c.field-meta.xml
<CustomField>
    <fullName>CWS_Master_Dedicated_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Dedicated Tech</label>
    <type>Checkbox</type>
</CustomField>