force-app/main/default/objects/Order/fields/CWS_Migrated_Agreement__c.field-meta.xml
<CustomField>
    <fullName>CWS_Migrated_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Manage agreement</label>
    <type>Checkbox</type>
</CustomField>