force-app/main/default/objects/Order/fields/CWS_MinLineStartDate__c.field-meta.xml
<CustomField>
    <fullName>CWS_MinLineStartDate__c</fullName>
    <description>Min Line Start Date copied from Quote</description>
    <label>Min Line Start Date</label>
    <type>Date</type>
</CustomField>