force-app/main/default/objects/Order/fields/CWS_NetSuite_RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_NetSuite_RMA_Number__c</fullName>
    <label>NetSuite RMA Number</label>
    <type>TextArea</type>
</CustomField>