force-app/main/default/objects/Order/fields/CWS_NetSuiteOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CWS_NetSuiteOrderNumber__c</fullName>
    <description>NetSuite Order Number stamped back from NetSuite Integration</description>
    <label>NetSuite Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>