force-app/main/default/objects/Order/fields/CWS_Number_of_Evergreen_Products__c.field-meta.xml
<CustomField>
    <fullName>CWS_Number_of_Evergreen_Products__c</fullName>
    <description>Returns the number of Order Lines which are Evergreen</description>
    <label>Number of Evergreen Products</label>
    <summaryFilterItems>
        <field>OrderItem.CWS_Split_Order__c</field>
        <operation>equals</operation>
        <value>Evergreen</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.SBQQ__SubscriptionType__c</field>
        <operation>equals</operation>
        <value>Evergreen</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>