force-app/main/default/objects/Order/fields/CWS_Number_of_Order_Lines__c.field-meta.xml
<CustomField>
    <fullName>CWS_Number_of_Order_Lines__c</fullName>
    <description>Total number of Order Items in an Order</description>
    <label>Number of Order Lines</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>