force-app/main/default/objects/Order/fields/CWS_OF_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_OF_Signed_Date__c</fullName>
    <description>Twin field from quote</description>
    <label>OF Signed Date</label>
    <type>Date</type>
</CustomField>