force-app/main/default/objects/Order/fields/CWS_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Opportunity_ID__c</fullName>
    <formula>Opportunity.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>