force-app/main/default/objects/Order/fields/CWS_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Order_Amount__c</fullName>
    <label>Order Amount</label>
    <summarizedField>OrderItem.CWS_NetTotal__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>