force-app/main/default/objects/Order/fields/CWS_Order_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Order_End_Date__c</fullName>
    <inlineHelpText>Farthest Term End Date of all associated Order Lines</inlineHelpText>
    <label>Order End Date</label>
    <summarizedField>OrderItem.EndDate</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>