force-app/main/default/objects/Order/fields/CWS_Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Order_Start_Date__c</fullName>
    <inlineHelpText>Earliest Term Start Date of all associated Order Lines</inlineHelpText>
    <label>Order Start Date</label>
    <summarizedField>OrderItem.ServiceDate</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>