force-app/main/default/objects/Order/fields/CWS_Original_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_Original_Order_Number__c</fullName>
    <formula>CWS_OriginalOrder__r.OrderNumber</formula>
    <label>Original Order Number</label>
    <type>Text</type>
</CustomField>