force-app/main/default/objects/Order/fields/CWS_OriginalOrder__c.field-meta.xml
<CustomField>
    <fullName>CWS_OriginalOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent Order linked with the Contract. This is populated for amendment orders</description>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>CWS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>