force-app/main/default/objects/Order/fields/CWS_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>CWS_Payment_Term__c</fullName>
    <description>To capture the payment term on order if it is different than the bill to account&apos;s payment term</description>
    <formula>IF(TEXT(CWS_Bill_To_Account__r.CWS_Payment_Terms__c)&lt;&gt;TEXT(SBQQ__PaymentTerm__c),TEXT(SBQQ__PaymentTerm__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term</label>
    <type>Text</type>
</CustomField>