force-app/main/default/objects/Order/fields/CWS_Pre_Payment_Ammount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Pre_Payment_Ammount__c</fullName>
    <description>Pre Payment amount from Quote in case of Non Evergreen Order</description>
    <formula>if(AND(!CWS_Evergreen_Order__c,SBQQ__Quote__r.CWS_Pre_payment_Amount__c&gt;0) ,  SBQQ__Quote__r.CWS_Pre_payment_Amount__c , null)</formula>
    <inlineHelpText>PrePayment Amount applicable when the Order is non-evergreen</inlineHelpText>
    <label>Pre Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>