force-app/main/default/objects/Order/fields/CWS_Primary_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CWS_Primary_Contact_Email_Address__c</fullName>
    <formula>CWS_Bill_To_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Email Address</label>
    <type>Text</type>
</CustomField>