force-app/main/default/objects/Order/fields/CWS_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Primary_Contact_Name__c</fullName>
    <formula>CWS_Bill_To_Contact__r.FirstName +  CWS_Bill_To_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>