force-app/main/default/objects/Order/fields/CWS_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Quote_ID__c</fullName>
    <formula>SBQQ__Quote__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote ID</label>
    <type>Text</type>
</CustomField>