force-app/main/default/objects/Order/fields/CWS_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Quote_Type__c</fullName>
    <description>Quote type value twinned from the Quote record - to be used for backend purposes only</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal with Change</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>