force-app/main/default/objects/Order/fields/CWS_Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Type__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.CWS_Renewal_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Type</label>
    <type>Text</type>
</CustomField>