force-app/main/default/objects/Order/fields/CWS_Renewed_from_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewed_from_Order_Number__c</fullName>
    <description>Order number of the order from which it is Renewed</description>
    <formula>CWS_FirstOrder__r.OrderNumber</formula>
    <inlineHelpText>Order number of the First order from which Contract is created</inlineHelpText>
    <label>First Order Number</label>
    <type>Text</type>
</CustomField>