force-app/main/default/objects/Order/fields/CWS_Renewed_From_Subscription__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewed_From_Subscription__c</fullName>
    <description>Subscription Number from the immediate subscription</description>
    <formula>CWS_RenewedFromOrder__r.CWS_ZuoraSubscriptionNumber__c</formula>
    <label>Renewed From Subscription</label>
    <type>Text</type>
</CustomField>