force-app/main/default/objects/Order/fields/CWS_RenewedFromOrder__c.field-meta.xml
<CustomField>
    <fullName>CWS_RenewedFromOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recent parent order from the Renewal cycle</description>
    <label>Renewed From Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders (Renewed From Order)</relationshipLabel>
    <relationshipName>CWS_RenewedFromOrders</relationshipName>
    <type>Lookup</type>
</CustomField>