force-app/main/default/objects/Order/fields/CWS_Reseller_Account_s_Unique_identifier__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reseller_Account_s_Unique_identifier__c</fullName>
    <description>Reseller account&apos;s unique idenfier</description>
    <formula>CWS_Reseller_Account__r.CWS_Account_Unique_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Account&apos;s Unique identifier</label>
    <type>Text</type>
</CustomField>