force-app/main/default/objects/Order/fields/CWS_Reseller_s_Account_name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reseller_s_Account_name__c</fullName>
    <description>Reseller Account name</description>
    <formula>CWS_Reseller_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Account&apos;s name</label>
    <type>Text</type>
</CustomField>