force-app/main/default/objects/Order/fields/CWS_ReviewReason__c.field-meta.xml
<CustomField>
    <fullName>CWS_ReviewReason__c</fullName>
    <description>The reason behind the order being Under Review status</description>
    <inlineHelpText>The reason behind the Order being Under Review status</inlineHelpText>
    <label>Review Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing PO</fullName>
            </value>
            <value>
                <fullName>Recommit</fullName>
            </value>
            <value>
                <fullName>Currency Conversion</fullName>
            </value>
            <value>
                <fullName>Merger &amp; Acquisition</fullName>
            </value>
            <value>
                <fullName>Agreement Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>