force-app/main/default/objects/Order/fields/CWS_Sales_Rep_email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sales_Rep_email__c</fullName>
    <description>Email address of Sales Rep</description>
    <formula>SBQQ__Quote__r.Owner:User.Email</formula>
    <inlineHelpText>Email address of Sales Rep</inlineHelpText>
    <label>Sales Rep email</label>
    <type>Text</type>
</CustomField>