force-app/main/default/objects/Order/fields/CWS_SalesRepName__c.field-meta.xml
<CustomField>
    <fullName>CWS_SalesRepName__c</fullName>
    <formula>SBQQ__Quote__r.Owner:User.FirstName +&apos; &apos;+ SBQQ__Quote__r.Owner:User.MiddleName +&apos; &apos;+ SBQQ__Quote__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Name</label>
    <type>Text</type>
</CustomField>