force-app/main/default/objects/Order/fields/CWS_SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>CWS_SourceSystem__c</fullName>
    <description>Source System Information</description>
    <inlineHelpText>Source System Information</inlineHelpText>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>