force-app/main/default/objects/Order/fields/CWS_Term__c.field-meta.xml
<CustomField>
    <fullName>CWS_Term__c</fullName>
    <description>Difference between Order Start Date and Order End Date in Months</description>
    <formula>IF((YEAR(CWS_Order_End_Date__c)=YEAR(CWS_Order_Start_Date__c))&amp;&amp; (MONTH(CWS_Order_End_Date__c)=MONTH(CWS_Order_Start_Date__c)),1,
IF((YEAR(CWS_Order_End_Date__c)=YEAR(CWS_Order_Start_Date__c)&amp;&amp; DAY(CWS_Order_Start_Date__c)=1),MONTH(CWS_Order_End_Date__c)-MONTH(CWS_Order_Start_Date__c)+1,
IF(YEAR(CWS_Order_End_Date__c)=YEAR(CWS_Order_Start_Date__c),MONTH(CWS_Order_End_Date__c)-MONTH(CWS_Order_Start_Date__c),((YEAR(CWS_Order_End_Date__c)- YEAR(CWS_Order_Start_Date__c)-1)*12)+12 - MONTH(CWS_Order_Start_Date__c)+1+MONTH(CWS_Order_End_Date__c)-IF(DAY(CWS_Order_End_Date__c) &lt; DAY(CWS_Order_Start_Date__c)
,1,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duration of the Order in a month</inlineHelpText>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>