force-app/main/default/objects/Order/fields/CWS_Upfront_Billing__c.field-meta.xml
<CustomField>
    <fullName>CWS_Upfront_Billing__c</fullName>
    <inlineHelpText>This is true if Upfront Billing Date is not null</inlineHelpText>
    <label>Upfront Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>