force-app/main/default/objects/Order/fields/CWS_Upfront_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Upfront_Billing_Date__c</fullName>
    <inlineHelpText>Max start date from current month  with billing type as advance and charge type as recurring</inlineHelpText>
    <label>Upfront Billing Date</label>
    <type>Date</type>
</CustomField>