force-app/main/default/objects/Order/fields/CWS_ZuoraSubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZuoraSubscriptionId__c</fullName>
    <description>Subscription Id Stamped back from Zuora Integration</description>
    <label>Zuora Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>