force-app/main/default/objects/Order/fields/CWS_ZuoraSubscriptionNumber__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZuoraSubscriptionNumber__c</fullName>
    <description>Subscription Number stamped back from the Zuora Integration</description>
    <label>Zuora Subscription Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>