force-app/main/default/objects/Order/fields/SBQQ__ContractingMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ContractingMethod__c</fullName>
    <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
    <inlineHelpText>It represents whether the order will be split by line end date or a single contract will be generated.</inlineHelpText>
    <label>Contracting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__ContractingMethod</valueSetName>
    </valueSet>
</CustomField>