force-app/main/default/objects/Order/fields/Temp_term__c.field-meta.xml
<CustomField>
    <fullName>Temp_term__c</fullName>
    <label>Temp term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>